--- a/Number Input Task 02102025/tsconfig.json
+++ b/Number Input Task 02102025/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ESNext",
     "useDefineForClassFields": true,
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "lib": ["ES2015", "DOM", "DOM.Iterable", "ESNext"],   // ✅ added ES2015
     "allowJs": false,
     "skipLibCheck": true,
     "esModuleInterop": false,
@@ -10,11 +10,11 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "module": "ESNext",
-    "moduleResolution": "Node",
+    "moduleResolution": "Node16",                         // ✅ fixes plugin-react resolution
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,                // ✅ noEmit is fine here (Vite handles emit)
-    "jsx": "react-jsx"             // ✅ new JSX transform, no need for `import React`
+    "noEmit": true,
+    "jsx": "react-jsx"
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
