--- a/Number Input Task 02102025/tsconfig.node.json
+++ b/Number Input Task 02102025/tsconfig.node.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
-    "composite": true,             // ✅ required for project references
+    "composite": true,
     "module": "ESNext",
-    "moduleResolution": "Node",
+    "moduleResolution": "Node16",                         // ✅ same here
     "allowSyntheticDefaultImports": true,
-    "noEmit": false                // ✅ must NOT disable emit
+    "lib": ["ES2015"],                                    // ✅ added
+    "noEmit": false
   },
   "include": ["vite.config.ts"]
 }
